--- a/pom.xml
+++ b/pom.xml
@@ -15,28 +15,46 @@
     </properties>
 
     <dependencies>
+        <!-- LangChain4j core -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j</artifactId>
             <version>1.5.0</version>
         </dependency>
+
+        <!-- Google Gemini (chat + embeddings) -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-google-ai-gemini</artifactId>
             <version>1.5.0</version>
         </dependency>
+
+        <!-- Client HTTP JDK (recommandé) -->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-http-client-jdk</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
+        <!-- Logger SLF4J -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
             <version>2.0.17</version>
         </dependency>
+
+        <!-- PARSEUR PDFBOX (version disponible) -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-document-parser-apache-pdfbox</artifactId>
-            <version>1.0.1-beta6</version>
+            <version>1.5.0-beta11</version>
         </dependency>
-
-
+        <!-- Alternative possible :
+        <dependency>
+          <groupId>dev.langchain4j</groupId>
+          <artifactId>langchain4j-document-parser-apache-pdfbox</artifactId>
+          <version>1.8.0-beta15</version>
+        </dependency> -->
     </dependencies>
 
 </project>
